--- a/style.css
+++ b/style.css
@@ -1,59 +1,48 @@
-/*
-body{
-    background-image: url(fon.png);
-    background-position: center center;
-    background-attachment: fixed;
-    background-size: cover;
-    margin: 0%;
-    padding: 0%;
-} 
-    */
-
 body {
         margin: 0;
         padding: 0;
     }
 
     section {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-image: url(fon.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
+        display: flex;/*блокировка картинки по отношению к сайту*/
+        justify-content: center;/*всегда по центру*/
+        align-items: center; /*положение картинки*/
+        height: 100vh;/*высота*/
+        background-image: url(fon.jpg); /*определение картинки*/
+        background-repeat: no-repeat; /*повторение картинки*/
+        background-size: cover; /*размер картинки*/
     }
 
-    .content-box{
-        padding: 50px;
-        color: #fff;
-        font-size: 36px;
+    .content-box{ /*полупрозрачный блок*/
+        padding: 50px; /*размер до грани*/
+        color: #fff;/*цвет*/
+        font-size: 36px;/*размер*/
         text-transform: uppercase;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        background: rgba(255, 255, 255, 0,2);
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0,1);
-        backdrop-filter: blur(10px);
+        background: rgba(255, 255, 255, 0,2);/*цвет и прозрасность рамки*/
+        border-radius: 16px;/*рамка*/
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0,1);/*степень размытия*/
+        backdrop-filter: blur(10px);/*затемнение*/
         -webkit-backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0,3);
+        border: 1px solid rgba(255, 255, 255, 0,3);/*рамка*/
     }
 
     
 
-    .details {
-        position: relative;
-        display: block;
-        max-width: 650px;
-        max-height: 500px;
-        margin: 0 auto 10px;
-        background: rgba(255, 255, 255, 0.251);
-        border-radius: 5px;
-        transition: 0.7s;
+    .details {/*при раскрытом списке*/
+        position: relative;/*положение*/
+        display: block;/*блокировки при приближении сайта*/
+        max-width: 650px;/*максимальная ширина при открытии*/
+        max-height: 500px;/*максимальная высота при открытии*/
+        margin: 0 auto 10px;/*сдвиг*/
+        background: rgba(255, 255, 255, 0.251);/*фон*/
+        border-radius: 5px;/*рамка*/
+        transition: 0.7s;/*задержка*/
         overflow: hidden;
       }
 
 
       
       .details[open] {
-        padding-bottom: 20px;
+        padding-bottom: 20px;/*рамка*/
       }
